added dataType to jquery

--- a/project/carviewer.html
+++ b/project/carviewer.html
@@ -154,6 +154,7 @@
                 method: 'POST',
                 contentType: 'application/json',
                 data: JSON.stringify(car),
+                dataType: 'json',
                 success: function(response) {
                     car.id = response.id;
                     addCarToTable(car);
@@ -172,6 +173,7 @@
                 method: 'PUT',
                 contentType: 'application/json',
                 data: JSON.stringify(car),
+                dataType: 'json',
                 success: function() {
                     $(`#${car.id}`).replaceWith(`
                         <tr id="${car.id}">
@@ -198,6 +200,7 @@
                 $.ajax({
                     url: `/cars/${id}`,
                     method: 'DELETE',
+                    dataType: 'json',
                     success: function() {
                         $(button).closest('tr').remove();
                     },
@@ -212,6 +215,7 @@
             $.ajax({
                 url: '/cars',
                 method: 'GET',
+                dataType: 'json',
                 success: function(cars) {
                     $('#carTable').empty();
                     cars.forEach(addCarToTable);
