--- a/project/carviewer.html
+++ b/project/carviewer.html
@@ -95,7 +95,7 @@
                     <td>${car.brand}</td>
                     <td>${car.model}</td>
                     <td>${car.year}</td>
-                    <td>$${car.price.toFixed(2)}</td>
+                    <td>$${car.price}</td>
                     <td>
                         <button class="btn btn-sm btn-warning" onclick="editCar(${car.id})">Edit</button>
                         <button class="btn btn-sm btn-danger" onclick="deleteCar(${car.id})">Delete</button>
