--- a/project/carviewer.html
+++ b/project/carviewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Viewer</title>
+    <title>Car Management System</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body class="container mt-4">
-    <h1>Car Viewer</h1>
+    <h1>Car Management System</h1>
     
     <!-- Search Section -->
     <div class="form-section card p-3 mb-4">
